--- a/coffee.html
+++ b/coffee.html
@@ -6,6 +6,10 @@
   <title>泰山咖啡莊園</title>
   <link rel="stylesheet" href="./css/bootstrap.css">
   <style>
+    /* body {
+      overflow: hidden;
+    } */
+
     #k .btn-close{
       filter: invert(100);
     }
@@ -13,7 +17,44 @@
     #kc .carousel-item img {
       object-fit: cover;
     }
+    .font{
+      text-align: center;
+      margin-top: 5%;
+    }
 
+    .color{
+      background: rgb(236, 236, 236);
+    }
+    .img-circle{
+      width: 100;
+      height: 100;
+      border-radius:50%
+    }
+
+    .f-color{
+      color: aliceblue;
+    }
+
+    .sex{
+        margin-top: 30px;
+        margin-left: 0;
+        display: block;
+        width: 185px;
+        height: 40px;
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        background-color: #e6e6e6;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border-radius: 0.25rem;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
     @media(min-width: 576px) {
       #myCarousel {
         height: calc(40vh + 10vw);
@@ -125,7 +166,7 @@
   </section>
 
   <!-- 卡片 -->
-  <div id="sec2" class="d-flex justify-content-center align-items-center">
+  <div id="sec2" class="d-flex justify-content-center align-items-center my-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-4">
@@ -166,33 +207,118 @@
   <div id="se3">
       <div class="row">
         <div class="col-xl-6">
-          <img class="w-100 h-100" src="https://picsum.photos/1200/600/?random=1">
+          <img class="w-100 h-100" src="https://picsum.photos/600/600/?random=1">
         </div>
-        <div class="col-xl-6 d-flex justify-content-center align-items-center text-center" >
+        <div class="col-xl-6 mx-4 d-flex justify-content-center align-items-center text-center" >
           <div>
             <h2>Coffee Shop</h2>
             <p>中壢行情高中優點走向很好可憐國內外留言對不起數量，引起規劃對此我看信號風格精選爸爸 出租民間公開尋找消息至少激烈監管，完整用品讓人頻率課程發表只見報價檢查三年，警察盯着屬於維護彷彿，主題告訴，相信降價指南眼神，權利打造簽名日月潭，出口以為話題版權所有安全是我多次面積孤獨必然到達死亡完整，金融高雄我有，舉報效益相對只能運行平台，網路內部策。</p>
-            <a href="#" class="btn btn-primary">VIEW COLLECTION</a>
+            <a href="#" class="btn btn-success">VIEW COLLECTION</a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xl-6 d-flex justify-content-center align-items-center text-center order-sm-1">
-          <div>
+          <div class="card-text">
             <h2>Coffee Shop</h2>
-            <p>中壢行情高中優點走向很好可憐國內外留言對不起數量，引起規劃對此我看信號風格精選爸爸 出租民間公開尋找消息至少激烈監管，完整用品讓人頻率課程發表只見報價檢查三年，警察盯着屬於維護彷彿，主題告訴，相信降價指南眼神，權利打造簽名日月潭，出口以為話題版權所有安全是我多次面積孤獨必然到達死亡完整，金融高雄我有，舉報效益相對只能運行平台，網路內部策。</p>
-            <a href="#" class="btn btn-primary">VIEW COLLECTION</a>
+            <p>都沒網域名稱近日重點目前，高雄表面故事一張瀏覽私服對手標誌治療素質我和概念指揮很久，開關庫存領先文明打造隨便風格商城一路自己的前往農業人們，角色時代上下高手包裝唯一警察這就是再說合理同步，公開人們寵物精華更是動畫淡淡，請問無聊檔案離線教師條款，宜蘭魔法保。</p>
+            <a href="#" class="btn btn-success">VIEW COLLECTION</a>
           </div>
         </div>
         <div class="col col-xl-6 order-sm-0">
-          <img class="w-100 h-100" src="https://picsum.photos/1200/600/?random=2">
+          <img src="https://picsum.photos/1200/600/?random=2">
         </div>
       </div>
   </div>
 
-  
+  <!-- map -->
+  <div class="col-sm-12 col-xl-12">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.703506716225!2d121.41694067607203!3d25.04413413788206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a7bec9ad74b1%3A0xa639904a89f26435!2z5Yue5YuV6YOo5Yue5YuV5Yqb55m85bGV572y5YyX5Z-65a6c6Iqx6YeR6aas5YiG572y5rOw5bGx6IG35qWt6KiT57e05aC0!5e0!3m2!1szh-TW!2stw!4v1704433159291!5m2!1szh-TW!2stw" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 
-  <!--  -->
+  <!-- connect -->
+  <div class="color my-5" >
+    <form class="container">
+      <div class="row">
+        <div class="font col-12">
+          <h1>聯絡我們</h1>
+          <h3>泰山咖啡莊園，傳承熱情coding精神</h3>
+          <p>任何服務問題或建議，歡迎您透過客服表單告知我們，謝謝!</p>
+        </div>
+        <div class="mb-3 col col-xl-4 ">
+          <label for="exampleInputPassword1" class="form-label">姓名</label>
+          <input type="password" class="col form-control" id="exampleInputPassword1">
+        </div>
+        <!-- sex -->
+        <div class="color col-3 col-xl-2 col-sm-3 sex">
+          <div class="form-check form-check-inline">
+            <label class="form-check-label" for="inlineRadio1">先生</label>
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+          </div>
+          <div class="form-check form-check-inline">
+            <label class="form-check-label" for="inlineRadio2">女士</label>
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+          </div>
+        </div>
+        <div class="mb-3 col-xl-6">
+          <label for="exampleInputEmail1" class="form-label">電話</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-xl-6">
+          <label class="form-label">電子信箱</label>
+          <input type="email" class="form-control" >
+        </div>
+        <div class="mb-3 col-xl-6">
+          <label class="form-label">問題類型</label>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>餐飲建議</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+        <div class="mb-3 ">
+          <label for="exampleFormControlTextarea1" class="form-label">意見需求</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">訂閱泰山莊園最新資訊</label>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-secondary">送出</button>
+    </form>
+  </div>
+
+
+  <!-- footer  -->
+  <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4 bg-black f-color">
+    <div class="col col-sm-6 mt-5">
+        <img src="./11zon_cropped.png" class="card-img-top" style="width: 40%;">
+    </div>
+    <div class="col col-sm-6  mt-5">
+      <div class="card-body">
+        <h5 class="card-title">Address</h5>
+        <p class="card-text">1234 Street Name <br> City,AA 99999</p>
+      </div>
+    </div>
+    <div class="col col-sm-6  mt-5">
+      <div class="card-body">
+        <h5 class="card-title">Links</h5>
+        <p class="card-text">Website builder<br> Download for Windows <br>Download for Mac</p>
+      </div>
+    </div>
+    <div class="col col-sm-6  mt-5">
+      <div class="card-body">
+        <h5 class="card-title">Contacts</h5>
+        <p class="card-text">Email:support@mobirise.com<br> Phone:0000 000 0000 <br>Fax:886 000 00000</p>
+      </div>
+    </div>
+    <div class="m-auto">
+      <p>c Copyright 2021 k Change - All Right Reserved</p>
+    </div>
+  </div>
+
   <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
