--- a/coffee.html
+++ b/coffee.html
@@ -204,32 +204,31 @@
   </div> 
 
   <!-- 兩欄 -->
-  <div id="se3">
-      <div class="row">
-        <div class="col-xl-6">
-          <img class="w-100 h-100" src="https://picsum.photos/600/600/?random=1">
-        </div>
-        <div class="col-xl-6 mx-4 d-flex justify-content-center align-items-center text-center" >
-          <div>
-            <h2>Coffee Shop</h2>
-            <p>中壢行情高中優點走向很好可憐國內外留言對不起數量，引起規劃對此我看信號風格精選爸爸 出租民間公開尋找消息至少激烈監管，完整用品讓人頻率課程發表只見報價檢查三年，警察盯着屬於維護彷彿，主題告訴，相信降價指南眼神，權利打造簽名日月潭，出口以為話題版權所有安全是我多次面積孤獨必然到達死亡完整，金融高雄我有，舉報效益相對只能運行平台，網路內部策。</p>
-            <a href="#" class="btn btn-success">VIEW COLLECTION</a>
-          </div>
-        </div>
+  <div class="row">
+    <div class="col-xl-6 col-sm-12 order-xl-last p-0 overflow-hidden">
+      <img src="https://picsum.photos/800/600/?random=10" class="w-100">
+    </div>
+    <div class="col-xl-6 col-sm-12 d-flex align-items-center" style="background: rgb(232, 232, 232);">
+      <div class="text-center" >
+        <h2>Coffee Shop</h2>
+        <p class="fs-5">還是特別後面，手裡轉換採用印象舉辦空調警察不要首次住了再次最低某種共有規模，家庭一塊演唱會情形舉行很有教材對此遊客亞洲保健我說女士，後悔遠程少女廣播年輕人福建聲明參加友情原文興奮，事實風險接着高考，浪漫能源，化學都市分享原文正確用於到達最近事實上對話，執。</p>
+        <a href="#" class="btn btn-success">Go somewhere</a>
       </div>
-      <div class="row">
-        <div class="col-xl-6 d-flex justify-content-center align-items-center text-center order-sm-1">
-          <div class="card-text">
-            <h2>Coffee Shop</h2>
-            <p>都沒網域名稱近日重點目前，高雄表面故事一張瀏覽私服對手標誌治療素質我和概念指揮很久，開關庫存領先文明打造隨便風格商城一路自己的前往農業人們，角色時代上下高手包裝唯一警察這就是再說合理同步，公開人們寵物精華更是動畫淡淡，請問無聊檔案離線教師條款，宜蘭魔法保。</p>
-            <a href="#" class="btn btn-success">VIEW COLLECTION</a>
-          </div>
-        </div>
-        <div class="col col-xl-6 order-sm-0">
-          <img src="https://picsum.photos/1200/600/?random=2">
-        </div>
+    </div>
+    <div class="col-xl-6 col-sm-12  order-xl-first p-0 overflow-hidden">
+      <img src="https://picsum.photos/800/600/?random=11" class="w-100">
+    </div>
+    <div class="col-xl-6 col-sm-12 d-flex align-items-center" style="background: rgb(232, 232, 232);">
+      <div class="text-center">
+        <h2>Coffee Shop</h2>
+        <p class="fs-5">還是特別後面，手裡轉換採用印象舉辦空調警察不要首次住了再次最低某種共有規模，家庭一塊演唱會情形舉行很有教材對此遊客亞洲保健我說女士，後悔遠程少女廣播年輕人福建聲明參加友情原文興奮，事實風險接着高考，浪漫能源，化學都市分享原文正確用於到達最近事實上對話，執。</p>
+        <a href="#" class="btn btn-success">Go somewhere</a>
       </div>
+    </div>
   </div>
+  
+  
+
 
   <!-- map -->
   <div class="col-sm-12 col-xl-12">
@@ -237,7 +236,7 @@
   </div>
 
   <!-- connect -->
-  <div class="color my-5" >
+  <div class="color mb-4" >
     <form class="container">
       <div class="row">
         <div class="font col-12">
